[package]
name = "example-app"
version = "0.1.0"
edition = "2018"

[dependencies]
example-api = { git = "ssh://git@github.com/Cube-OS/example-api.git"}
bincode = { git = "ssh://git@github.com/Cube-OS/bincode.git"}
cubeos-service = { git = "ssh://git@github.com/Cube-OS/cubeos-service.git", features = ["app"] }
serde = { version = "1.0", features = ["derive"] }